# simple-api-restaurant

./: Cargo.toml  README.md
src/: handler.rs  lib.rs  main.rs  repository.rs  service.rs
src/model/: domain.rs  error.rs  http.rs  mod.rs  view.rs
